# airflow-docker

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
airflow/: Dockerfile  airflow_pull_dags_folder.py
airflow/patch/: 0001-Add-support-for-declarative-dags-provided-by-airflow.patch  0002-Add-environ-to-the-jinja2-template-context.patch  0003-DockerOperator-disable-template_ext.patch  0004-Docker-Operator-add-volumes-to-template_fields.patch  0006-Fix-AttributeError-datetime.timezone-object-has-no-a.patch  0008-Serialized-DAGs-fix-pendulum-unable-to-parse-UTC-03-.patch  5001-Move-DAG._schedule_interval-logic-out-of-DAG.__init_.patch  5002-RBAC-ui-fix-missing-task-runs-being-rendered-as-circ.patch  5003-RBAC-ui-fix-missing-Y-axis-labels-with-units-in-Land.patch
project_common/: Dockerfile  setup.cfg
project_common/src/project_common/: abc.py  cli_types.py  testing_cli.py
project_common/tests/: test_abc.py
project_complex/: Dockerfile  setup.cfg  setup.py
project_complex/dags/: project_complex_pymath.py  project_complex_random.yml
project_complex/src/project_complex/: random_sensor.py  random_task.py
project_complex/tests/: test_random_sensor.py  test_random_task.py
project_complex/tests/dags/: test_cli.py
project_simple/: Dockerfile  setup.cfg
project_simple/dags/: project_simple_echo.yml
project_simple/src/project_simple/: echo.py
project_simple/tests/: test_echo.py
project_simple/tests/dags/: test_cli.py  test_declarative.py
