[metadata]
name = project_common

[options]
include_package_data = True
install_requires =
    # Airflow doesn't support pendulum 2, but it has to be installed
    # in `dev` extras in order to test declarative dags.
    pendulum<2

    click
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
dev =
    pytest

    apache-airflow>=1.10.6,<1.11

[options.packages.find]
where = src
