[metadata]
name = project_simple

[options]
include_package_data = True
install_requires =
    click
    project_common
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.extras_require]
dev =
    pytest

    apache-airflow>=1.10.6,<1.11

    airflow-declarative>=1.1
    docker

[options.packages.find]
where = src
